src/test/ui/issues/issue-39388.stderr
error: expected `*` or `+`
  --> $DIR/issue-39388.rs:4:22
   |
LL |     (($($a:tt)*) = ($($b:tt))*) => { //~ ERROR expected `*` or `+`
   |                      ^^^^^^^

error: aborting due to previous error

