src/test/ui/issues/issue-39388.rs
#![allow(unused_macros)]

macro_rules! assign {
    (($($a:tt)*) = ($($b:tt))*) => { //~ ERROR expected `*` or `+`
        $($a)* = $($b)*
    }
}

fn main() {}
